--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -34,3 +34,18 @@
     margin-bottom: 1.25rem;
     margin-left: .7rem;
 }
+
+@media screen and (min-width: 1024px) {
+    .cabecalho {
+        flex-direction: row;
+        justify-content: space-between;
+
+        border: none;
+
+        padding-right: 6%;
+        padding-left: 6%;
+    }
+    
+}
+
+
